# sloth

./: .gitignore  Cargo.toml  README.md  build-release.ps1
.github/workflows/: release.yml
.signpath/artifact-configurations/: default.xml
config-idea/: config.json  config.toml  schema.md  shingeta.toml  tuki2-263.toml
data/: config.json
data/layouts/: shingeta.toml  圧縮版_新下駄配列.txt
docs/: code-signing-design.md
dvorakj-parser/: Cargo.toml  cbindgen.toml  layout.md  standalone-design.md
dvorakj-parser/src/: block.rs  cell.rs  decode.rs  ffi.rs  grid.rs  json.rs  keymap.rs  lib.rs  model.rs  parse.rs  sloth.rs
dvorakj-parser/tests/: ffi_roundtrip.rs  parse_smoke.rs  sloth_convert.rs
rmap-config/: Cargo.toml
rmap-config/src/: main.rs
rmap-config/ui/: app-window.slint
rmap-core/: Cargo.toml
rmap-core/src/: config.rs  lib.rs  matcher.rs  output.rs
rmap-core/src/hook/: mod.rs  windows.rs
rmap-core/src/ipc/: mod.rs
rmap-core/tests/: parser_matcher.rs
rmap-daemon/: Cargo.toml
rmap-daemon/src/: main.rs
sloth-config/: Cargo.toml
sloth-config/src/: main.rs
sloth-config/ui/: app-window.slint
sloth-core/: Cargo.toml
sloth-core/src/: config.rs  event.rs  keycode.rs  layout.rs  lib.rs  loader.rs  log.rs  matcher.rs  modifiers.rs  output.rs  profile.rs  sloth_parser.rs
sloth-core/src/hook/: mod.rs  windows.rs
sloth-core/src/ipc/: mod.rs  windows.rs
sloth-daemon/: Cargo.toml
sloth-daemon/src/: main.rs
sloth-daemon/tests/: composite_loader.rs
sloth-dvorakj-adapter/: Cargo.toml
sloth-dvorakj-adapter/src/: lib.rs
sloth-dvorakj-adapter/tests/: parser_matcher.rs
sloth-parser/: Cargo.toml
sloth-parser/src/: key.rs  lib.rs  model.rs  parse.rs  serialize.rs
