[workspace]
members = ["rmap-core", "rmap-dvorakj-adapter", "rmap-daemon", "rmap-config"]
exclude = ["dvorakj-parser"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "NYSL-0.9982"
authors = ["cet-t"]
repository = "https://github.com/cet-t/rmap"

[workspace.dependencies]
# Core shared deps (add as needed)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
bitflags = "2"
clap = { version = "4", features = ["derive"] }
# Platform specific later
# For now, keep minimal for Phase 1

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"   # size for daemon <10MiB target
