[workspace]

[package]
name = "dvorakj-parser"
version = "0.1.1"
edition = "2021"
license = "NYSL-0.9982"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
encoding = ["dep:encoding_rs"]
json = ["dep:serde", "dep:serde_json"]
ffi = ["json"]
cdylib-full = ["ffi", "encoding"]

[dependencies]
encoding_rs = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
