[package]
name = "dvorakj-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
encoding = ["dep:encoding_rs"]
json = ["dep:serde", "dep:serde_json"]
ffi = ["json"]
cdylib-full = ["ffi", "encoding"]

[dependencies]
encoding_rs = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
