[package]
name = "dvorakj-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
encoding = ["dep:encoding_rs"]
json = ["dep:serde", "dep:serde_json"]
ffi = ["json"]
cdylib-full = ["ffi", "encoding"]
# Converts a parsed DvorakJ layout into `sloth_parser::CompiledLayout`, the
# canonical "sloth format" internal representation -- so a caller (e.g.
# sloth-core) can treat every source format uniformly once loaded. Off by
# default so the base rlib build stays free of the sloth-parser dependency.
sloth = ["dep:sloth-parser"]

[dependencies]
encoding_rs = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sloth-parser = { path = "../sloth-parser", optional = true }

[[test]]
name = "sloth_convert"
required-features = ["sloth", "encoding"]
