[package]
name = "rmap-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rmap-config"
path = "src/main.rs"

[dependencies]
rmap-core = { path = "../rmap-core" }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
slint = "1.16"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
raw-window-handle = "0.6"

[build-dependencies]
slint-build = "1.16"
