[package]
name = "sloth-parser"
version = "0.1.0"
edition = "2021"
license = "NYSL-0.9982"
authors = ["cet-t"]
description = "Standalone TOML/JSON layout-config parser for rmap (no internal deps)."

# Standalone: depends only on published crates (no internal/workspace deps),
# so it can be reused outside this repository (publish to crates.io or vendor).
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
